objects/SCP_Certa_GC__Big_Deal__c.object
<CustomObject>
    <fields>
        <fullName>SCP_Certa_GC__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Big Deals</relationshipLabel>
        <relationshipName>Big_Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__currency1__c</fullName>
        <label>FCV o Valor total del Contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__currency2__c</fullName>
        <label>NAV o ingresos próximos 12 meses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__date1__c</fullName>
        <label>¿Cuándo hay que entregar la oferta?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__date2__c</fullName>
        <label>Fecha estimada de comienzo del contrato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__number1__c</fullName>
        <label>Duración del proyecto (meses)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__number2__c</fullName>
        <label>¿Cuál es el plazo de ejecución (meses)?</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__number3__c</fullName>
        <label>Nº de meses hasta entregar la propuesta</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__question1__c</fullName>
        <label>question1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__question2__c</fullName>
        <label>question2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__question3__c</fullName>
        <label>question3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Big Deal</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nombre de Big Deal</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Big Deals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>